# scrapy_devcontainer

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json  onCreate.sh  postCreate.sh
