[tool.poetry]
name = "quotes-scrapy"
version = "0.1.0"
description = ""
authors = ["Ivan Lohvyn <i.logvyn@gmail.com>"]
readme = "README.md"
packages = [{include = "quotes_scrapy"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
